# SysDock

./: ._pyproject.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  EC2_DEPLOY_GUIDE.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  SETUP_GUIDE.md  SysDock.spec  SysDock_Ultimate.spec  SysDock_v1.2.8.spec  SysDock_v1.2.9.spec  SysDock_v1.3.0.spec  SysDock_v1.3.1.spec  SysDock_v1.3.2.spec  SysDock_v1.3.3.spec  install.sh  pyproject.toml  requirements-dev.txt  setup.py  test_sysdock.py
.github/workflows/: ci.yml  workflow.yml
infravision_agent/: __main__.py  cli.py  server.py
infravision_agent/collectors/: docker_collector.py  processes.py  security.py  system.py
infravision_agent/display/: dashboard.py
mac/: README.md  install_sysdock_mac.sh
sysdock/: __init__.py  __main__.py  cli.py  server.py
sysdock.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sysdock/collectors/: disk.py  docker_collector.py  network.py  processes.py  security.py  system.py
sysdock/core/: __init__.py  capabilities.py  errors.py  logging.py  proc.py  snapshot.py
sysdock/core/collectors/: __init__.py  cpu.py  disk.py  docker.py  host.py  memory.py  network.py  processes.py
sysdock/core/gpu/: __init__.py  amd.py  apple.py  intel.py  nvidia.py  schema.py
sysdock/core/security/: __init__.py  linux.py  macos.py  ports.py  schema.py  windows.py
sysdock/display/: __init__.py  dashboard.py
sysdock/web/: __init__.py  auth.py  metrics.py  ratelimit.py  server.py
sysdock/web/static/: app.js  index.html  style.css
tests/: test_sysdock.py
tests/unit/: test_capabilities.py  test_cli.py  test_collectors.py  test_docker_math.py  test_errors.py  test_gpu.py  test_logging.py  test_proc.py  test_security.py  test_snapshot.py  test_web.py
