[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sysdock"
version = "1.2.1"
description = "SysDock — Linux / EC2 monitoring agent with live terminal dashboard and Docker metrics"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.6"
keywords = ["monitoring", "metrics", "ec2", "linux", "devops", "docker", "sysadmin", "sysdock"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "psutil>=5.8.0",
    "rich>=12.0.0",
    "click>=7.0",
]

[project.optional-dependencies]
docker = ["docker>=5.0.0"]
server = ["flask>=2.0"]
all    = ["docker>=5.0.0", "flask>=2.0"]

[project.scripts]
sysdock = "infravision_agent.cli:main"

[project.urls]
Homepage = "https://github.com/Kavyvachhani/SysDock"
Issues   = "https://github.com/Kavyvachhani/SysDock/issues"

[tool.setuptools.packages.find]
where   = ["."]
include = ["infravision_agent*"]
